# varGuid-py

./: .pyproject.toml.swp  README.md  pyproject.toml  setup.py
varguid/: .__init__.py.swp  __init__.py
varguid/core/: __init__.py  irls.py
varguid/data/: datasets.py
varguid/utils/: helpers.py
