[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "varguid"
version = "0.1.0"
description = "Python implementation of VarGuid: Variance Guided Regression Models for Heteroscedastic Data"
readme = "README.md"
license = {text = "GPL-2.0-or-later"}
authors = [
    {name = "Zihao Wang", email = "zxw832@miami.edu"}
]
maintainers = [
    {name = "Zihao Wang", email = "zxw832@miami.edu"}
]
keywords = ["regression", "heteroscedasticity", "clustering", "machine learning", "python-port"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "cvxpy>=1.2.0",
    "statsmodels>=0.13.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
    "sphinx",
    "sphinx-rtd-theme"
]

[project.urls]
Homepage = "https://github.com/zionwzz/varGuid-py"
Repository = "https://github.com/zionwzz/varGuid-py"
Documentation = "https://github.com/zionwzz/varGuid-py#readme"
"Bug Reports" = "https://github.com/zionwzz/varGuid-py/issues"
"Original R Package" = "https://github.com/luminwin/varGuid"

[tool.setuptools.packages.find]
where = ["."]
include = ["varguid*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
